# learning-cpp

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md
inc/: GameState.h  Player.h  catch.h  main.h
src/: CMakeLists.txt  GameState.cpp  Player.cpp  main.cpp
test/: CMakeLists.txt  test_runner.cpp  test_runner.h  tests.cpp  tests.h
